Thu Jun 19 15:11:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * bin/fuzz.pl:

          Enable ORB_init() 3rd parameter null string check.

Thu Jun 19 14:11:04 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Monitor_Control/BSD_Network_Interface_Monitor.cpp:

          Explicitly #include <sys/ioctl.h> and <net/if.h> for non-inline
          builds.

Wed Jun 18 17:36:34 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * ace/Stack_Trace.cpp:

          Moved pragma disable warning directives from inside of function to
          outside to take effect.

Wed Jun 18 17:27:51  2008  Steve Huston  <shuston@riverace.com>

        * ace/CDR_Stream.h: Some doxygen improvements.

Wed Jun 18 15:36:11 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_orb_tests.lst:

          Added new run_test scripts for the special variants of the TAO
          POA EndpointPolicy test.

Wed Jun 18 13:20:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * bin/fuzz.pl:

          Redo check for wide character incompatabilty ORB_init() miss-use.
          Caters for multi-line ORB_init.

Wed Jun 18 12:16:48 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * bin/PerlACE/Run_Test.pm:

          Increase the process start wait time for QNX.

Wed Jun 18 10:43:20  UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Don't use deprecated options

Wed Jun 18 09:50:20  UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * README:
        * ACE-INSTALL.html:
          Updated

Tue Jun 17 22:43:20  2008  Steve Huston  <shuston@riverace.com>

        * ace/Reactor.h: Clarify that calling remove_handler() for a signal
          handler does not invoke the handler's handle_close() callback. Also
          note that this behavior is under debate in Bugzilla #2368. Thanks to
          Bill Kendall <wkendall at sgi dot com> for calling this to attention.
